<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_skills</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ruichao.wu@ipa.fraunhofer.de">ruichao</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <build_depend>nav2_util</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>yaml_cpp_vendor</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
