find_package(test_msgs REQUIRED)
find_package(example_interfaces REQUIRED)

ament_add_gtest(test_bt_action_client_node test_bt_action_client_node.cpp)
ament_add_gtest(test_bt_service_client_node test_bt_service_client_node.cpp)

ament_target_dependencies(test_bt_action_client_node ${dependencies} test_msgs)
ament_target_dependencies(test_bt_service_client_node ${dependencies} example_interfaces)
